# rust_api_example

./: .gitignore  .travis.yml  Cargo.toml  README.md
migrations/20161226201611_persons/: down.sql  up.sql
src/: main.rs
src/controllers/: default.rs  mod.rs  person.rs
src/helpers/: mod.rs  status.rs  validator.rs
src/lib/: db.rs  mod.rs  people.rs  schema.rs
src/middleware/: cors.rs  errors.rs  logs.rs  mod.rs
src/models/: mod.rs  people.rs
src/routes/: default.rs  names.rs  person.rs
tests/: helper.rs  lib.rs
